# FastAPSP

./: CMakeLists.txt
app/: MoreTaskMpiExample.cpp  singleNodeExample.cpp
fap/: fap.cpp  fap.h  fap_more_task_mpi.cpp  fap_more_task_mpi.h
fap/kernel/: batch_sssp.h  floyd.h  minplus.h
fap/kernel/cuda/: batch_sssp.cu  cuda_kernel.h  floyd.cu  minplus.cu
fap/utils/: checkResult.h  readIdFile.h  util_Myalgorithm.h  util_centralized.h  util_singleNode.h
